chore(ci): workflow and etl setup (#67)

--- a/.github/workflows/.deploy.yml
+++ b/.github/workflows/.deploy.yml
@@ -1,4 +1,4 @@
-name: .Deploys
+name: .Deploy
 
 on:
   workflow_call:
@@ -24,51 +24,50 @@ on:
         type: string
 
     outputs:
-      run_tests:
-        description: Run Cypress tests if the core apps have changed (excludes sync)
-        value: ${{ jobs.init.outputs.deploy_core }}
+      triggered:
+        description: Was a deployment triggered?
+        value: ${{ jobs.sync.outputs.deploy }}
 
 jobs:
+  # Deployments only run on Pull Requests if the sync/ directory is modified
   init:
-    name: Deploy (init)
+    name: Init
     environment: ${{ inputs.environment }}
-    outputs:
-      fam-modded-zone: ${{ steps.fam-modded-zone.outputs.fam-modded-zone }}
-      deploy_sync: ${{ steps.triggers.outputs.sync }}
     runs-on: ubuntu-24.04
     steps:
-      - name: Check sync triggers
-        uses: bcgov/action-diff-triggers@v0.2.0
-        id: check_sync
-        with:
-          triggers: ('common/' 'sync/')
-
-      # Simplify triggers
-      - name: Simplify triggers
-        id: triggers
-        run: |
-          echo "sync=${{ github.event_name != 'pull_request' || steps.check_sync.outputs.triggered == 'true' }}" >> $GITHUB_OUTPUT
-
-      - name: OpenShift Init
-        if: steps.triggers.outputs.core == 'true' || steps.triggers.outputs.sync == 'true'
-        uses: bcgov/action-deployer-openshift@v3.0.1
+      - name: Init
+        uses: bcgov/action-deployer-openshift@v3.2.0
         with:
           oc_namespace: ${{ vars.OC_NAMESPACE }}
           oc_server: ${{ vars.OC_SERVER }}
           oc_token: ${{ secrets.OC_TOKEN }}
           file: common/openshift.init.yml
-          overwrite: true
           parameters:
+            -p NAME=${{ github.event.repository.name }}
             -p ZONE=${{ inputs.target }}
             -p DB_PASSWORD='${{ secrets.DB_PASSWORD }}'
+            -p FORESTCLIENTAPI_KEY=unused
+            -p ORACLE_CERT_SECRET='${{ secrets.ORACLE_CERT_SECRET }}'
+            -p ORACLE_HOST='${{ vars.ORACLE_HOST }}'
+            -p ORACLE_PASSWORD='${{ secrets.ORACLE_PASSWORD }}'
             -p ORACLE_SERVICE='${{ vars.ORACLE_SERVICE }}'
             -p ORACLE_SYNC_USER='${{ vars.ORACLE_SYNC_USER }}'
             -p ORACLE_SYNC_PASSWORD='${{ secrets.ORACLE_SYNC_PASSWORD }}'
-            -p ORACLE_HOST='${{ vars.ORACLE_HOST }}'
+            -p ORACLE_USER='${{ vars.ORACLE_USER }}'
+            -p VITE_USER_POOLS_WEB_CLIENT_ID=unused
+          repository: bcgov/nr-spar
+          triggers: ('sync/')
 
+  database:
+    # Deployments only run on Pull Requests if the sync/ directory is modified
+    name: Database
+    needs: init
+    environment: ${{ inputs.environment }}
+    runs-on: ubuntu-24.04
+    steps:
       - name: Database
-        if: steps.triggers.outputs.core == 'true' || steps.triggers.outputs.sync == 'true'
-        uses: bcgov/action-deployer-openshift@v3.0.1
+        uses: bcgov/action-deployer-openshift@v3.2.0
+        timeout-minutes: 5
         with:
           oc_namespace: ${{ vars.OC_NAMESPACE }}
           oc_server: ${{ vars.OC_SERVER }}
@@ -76,21 +75,27 @@ jobs:
           file: common/openshift.database.yml
           overwrite: false
           parameters:
+            -p NAME=${{ github.event.repository.name }}
             -p ZONE=${{ inputs.target }}
             ${{ github.event_name == 'pull_request' && '-p DB_PVC_SIZE=192Mi' || '' }}
             ${{ github.event_name == 'pull_request' && '-p MEMORY_REQUEST=100Mi' || '' }}
             ${{ github.event_name == 'pull_request' && '-p MEMORY_LIMIT=200Mi' || '' }}
+          repository: bcgov/nr-spar
+          triggers: ('sync/')
 
-  # ETL testing will only run on Pull Requests if the sync/ directory is modified
   sync:
-    name: Deploy
+    # Deployments only run on Pull Requests if the sync/ directory is modified
+    name: Sync
+    needs: init
     environment: ${{ inputs.environment }}
-    if: needs.init.outputs.deploy_sync == 'true'
-    needs: [init]
+    outputs:
+      deploy: ${{ steps.sync.outputs.triggered }}
     runs-on: ubuntu-24.04
     steps:
-      - name: Deploy (sync)
-        uses: bcgov/action-deployer-openshift@v3.0.1
+      - name: Sync
+        id: sync
+        uses: bcgov/action-deployer-openshift@v3.2.0
+        timeout-minutes: 5
         with:
           file: sync/openshift.deploy.yml
           oc_namespace: ${{ vars.OC_NAMESPACE }}
@@ -101,11 +106,4 @@ jobs:
             -p TAG=${{ inputs.tag }}
             -p ZONE=${{ inputs.target }}
             ${{ github.event_name == 'pull_request' && '-p TEST_MODE=true' || '' }}
-
-      - uses: redhat-actions/openshift-tools-installer@v1
-        with:
-          oc: "4"
-
-      - name: Run sync ETL
-        if: github.event_name == 'pull_request'
-        run: ./sync/oc_run.sh ${{ inputs.tag }} ${{ secrets.oc_token }}
+          triggers: ('sync/')
