--- a/.github/workflows/job-sync.yml
+++ b/.github/workflows/job-sync.yml
@@ -1,7 +1,7 @@
 name: ETL Sync
 
 on:
-  schedule: [cron: "0 */2 * * *"] # Every other hour on the hour
+  # schedule: [cron: "0 */2 * * *"] # Every other hour on the hour
   workflow_dispatch:
 
 concurrency:
@@ -14,21 +14,25 @@ jobs:
     name: Sync (TEST)
     runs-on: ubuntu-24.04
     steps:
-      - uses: actions/checkout@v4
-      - uses: redhat-actions/openshift-tools-installer@v1
-        with:
-          oc: "4"
       - name: ETL (TEST)
-        run: ./sync/oc_run.sh test ${{ secrets.oc_token }}
-
-  sync-prod:
-    environment: prod
-    name: Sync (PROD)
-    runs-on: ubuntu-24.04
-    steps:
-      - uses: actions/checkout@v4
-      - uses: redhat-actions/openshift-tools-installer@v1
+        uses: bcgov/action-oc-runner@v0.3.0
         with:
-          oc: "4"
-      - name: ETL (PROD)
-        run: ./sync/oc_run.sh prod ${{ secrets.oc_token }}
+          oc_namespace: ${{ vars.OC_NAMESPACE }}
+          oc_server: ${{ vars.OC_SERVER }}
+          oc_token: ${{ secrets.OC_TOKEN }}
+          triggers: ('sync/')
+          command: ./sync/oc_run.sh test ${{ secrets.oc_token }}
+
+  # sync-prod:
+  #   environment: prod
+  #   name:
+  #   runs-on: ubuntu-24.04
+  #   steps:
+  #     - name: Sync (PROD)
+  #       uses: bcgov/action-oc-runner@v0.3.0
+  #       with:
+  #         oc_namespace: ${{ vars.OC_NAMESPACE }}
+  #         oc_server: ${{ vars.OC_SERVER }}
+  #         oc_token: ${{ secrets.OC_TOKEN }}
+  #         triggers: ('sync/')
+  #         command: ./sync/oc_run.sh prod ${{ secrets.oc_token }}
