--- a/sync/openshift.deploy.yml
+++ b/sync/openshift.deploy.yml
@@ -24,7 +24,7 @@ parameters:
     value: bcgov
   - name: REPO
     description: Repository name
-    value: nr-spar
+    value: nr-fds-pyetl
   - name: TEST_MODE
     description: "Run in test mode"
     value: "false"
@@ -52,8 +52,8 @@ objects:
         app: ${REPO}-${ZONE}
         cronjob: ${REPO}-${ZONE}
     spec:
-      # 00:00 on day-of-month 1 in every 12000th month from January through December
-      schedule: "0 0 1 1/12000 *" # https://crontab.guru/#0_0_1_1/12000_*
+      # At 00:00 on day-of-month 31 in February
+      schedule: "0 0 31 2/12000 0" # https://crontab.guru/#0_0_31_2_*
       startingDeadlineSeconds: 60
       concurrencyPolicy: "Replace"
       successfulJobsHistoryLimit: "${{JOB_HISTORY_SUCCESS}}"
@@ -82,32 +82,32 @@ objects:
                     - name: ORACLE_HOST
                       valueFrom:
                         secretKeyRef:
-                          name: ${REPO}-${ZONE}-sync
+                          name: ${REPO}-${ZONE}-${APP}
                           key: oracle-host
-                    - name: ORACLE_SYNC_PASSWORD
-                      valueFrom:
-                        secretKeyRef:
-                          name: ${REPO}-${ZONE}-sync
-                          key: oracle-sync-password
                     - name: ORACLE_PORT
                       value: ${ORACLE_PORT}
                     - name: ORACLE_SERVICE
                       valueFrom:
                         secretKeyRef:
-                          name: ${REPO}-${ZONE}-sync
+                          name: ${REPO}-${ZONE}-${APP}
                           key: oracle-service
+                    - name: ORACLE_SYNC_PASSWORD
+                      valueFrom:
+                        secretKeyRef:
+                          name: ${REPO}-${ZONE}-${APP}
+                          key: oracle-sync-password
                     - name: ORACLE_SYNC_USER
                       valueFrom:
                         secretKeyRef:
-                          name: ${REPO}-${ZONE}-sync
+                          name: ${REPO}-${ZONE}-${APP}
                           key: oracle-sync-user
-                    - name: POSTGRES_HOST
-                      value: ${REPO}-${ZONE}-database
                     - name: POSTGRES_DB
                       valueFrom:
                         secretKeyRef:
                           name: ${REPO}-${ZONE}-database
                           key: database-name
+                    - name: POSTGRES_HOST
+                      value: ${REPO}-${ZONE}-database
                     - name: POSTGRES_PASSWORD
                       valueFrom:
                         secretKeyRef:
