--- a/.github/workflows/.deploy.yml
+++ b/.github/workflows/.deploy.yml
@@ -28,9 +28,13 @@ on:
         description: Database PVC size; e.g. 1Gi
         default: "128Mi"
         type: string
+      test:
+        description: Run in test mode?
+        default: true
+        type: boolean
       test-mode:
         description: Test only?
-        default: 'true'
+        default: true
         type: string
 
     outputs:
@@ -86,7 +90,7 @@ jobs:
               -p NAME=${{ github.event.repository.name }}
             repository: bcgov/nr-spar
           - name: sync
-            file: sync/openhsift.deploy.yml
+            file: sync/openshift.deploy.yml
             overwrite: true
             parameters:
               -p TAG=${{ inputs.tag }}
@@ -106,3 +110,21 @@ jobs:
             ${{ matrix.parameters }}
           repository: ${{ matrix.repository }}
           triggers: ('sync/')
+
+  test:
+    name: Test ETL
+    environment: ${{ inputs.environment }}
+    if: inputs.test == true
+    needs: deploy
+    runs-on: ubuntu-24.04
+    timeout-minutes: 5
+    steps:
+      - name: Run sync ETL
+        timeout-minutes: 10
+        uses: bcgov/action-oc-runner@v0.3.0
+        with:
+          oc_namespace: ${{ vars.OC_NAMESPACE }}
+          oc_server: ${{ vars.OC_SERVER }}
+          oc_token: ${{ secrets.OC_TOKEN }}
+          triggers: ('sync/')
+          commands: ./sync/oc_run.sh ${{ github.event.number }} ${{ secrets.oc_token }}
