--- a/.github/workflows/.deploy.yml
+++ b/.github/workflows/.deploy.yml
@@ -123,8 +123,8 @@ jobs:
         timeout-minutes: 10
         uses: bcgov/action-oc-runner@v0.3.0
         with:
+          cronjob: ${{ github.event.repository.name }}-sync-${{ github.event.number }}
           oc_namespace: ${{ vars.OC_NAMESPACE }}
           oc_server: ${{ vars.OC_SERVER }}
           oc_token: ${{ secrets.OC_TOKEN }}
           triggers: ('sync/')
-          commands: ./sync/oc_run.sh ${{ github.event.number }} ${{ secrets.oc_token }}
