chore(ci): TEST and PROD ETL jobs (test mode) (#77)

--- a/.github/workflows/.deploy.yml
+++ b/.github/workflows/.deploy.yml
@@ -119,12 +119,11 @@ jobs:
     runs-on: ubuntu-24.04
     timeout-minutes: 5
     steps:
-      - name: Run sync ETL
-        timeout-minutes: 10
-        uses: bcgov/action-oc-runner@v0.3.0
+      - timeout-minutes: 10
+        uses: bcgov/action-oc-runner@v1.0.0
         with:
+          cronjob: ${{ github.event.repository.name }}-sync-${{ github.event.number }}
           oc_namespace: ${{ vars.OC_NAMESPACE }}
           oc_server: ${{ vars.OC_SERVER }}
           oc_token: ${{ secrets.OC_TOKEN }}
           triggers: ('sync/')
-          commands: ./sync/oc_run.sh ${{ github.event.number }} ${{ secrets.oc_token }}
