--- a/.github/workflows/.deploy.yml
+++ b/.github/workflows/.deploy.yml
@@ -127,7 +127,7 @@ jobs:
         uses: bcgov/action-oc-runner@v1.0.0
         with:
           cronjob: ${{ github.event.repository.name }}-${{ inputs.target }}-sync
-          cronjob_logs: true
+          cronjob_tail: -1
           oc_namespace: ${{ vars.OC_NAMESPACE }}
           oc_server: ${{ vars.OC_SERVER }}
           oc_token: ${{ secrets.OC_TOKEN }}
