--- a/.github/workflows/etl-prod.yml
+++ b/.github/workflows/etl-prod.yml
@@ -18,7 +18,7 @@ jobs:
         uses: bcgov/action-oc-runner@v1.0.0
         with:
           cronjob: ${{ github.event.repository.name }}-${{ github.event.number }}-sync
-          cronjob_logs: true
+          cronjob_tail: -1
           oc_namespace: ${{ vars.OC_NAMESPACE }}
           oc_server: ${{ vars.OC_SERVER }}
           oc_token: ${{ secrets.OC_TOKEN }}
