--- a/.github/workflows/etl-prod.yml
+++ b/.github/workflows/etl-prod.yml
@@ -17,7 +17,7 @@ jobs:
       - timeout-minutes: 10
         uses: bcgov/action-oc-runner@v1.0.0
         with:
-          cronjob: ${{ github.event.repository.name }}-${{ github.event.number }}-sync
+          cronjob: ${{ github.event.repository.name }}-prod-sync
           cronjob_tail: -1
           oc_namespace: ${{ vars.OC_NAMESPACE }}
           oc_server: ${{ vars.OC_SERVER }}
