--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -32,6 +32,7 @@ jobs:
     uses: ./.github/workflows/.deploy.yml
     with:
       environment: test
+      postgres-host: nr-spar-prod-database
       tag: ${{ needs.init.outputs.pr }}
       target: test
       test-mode: false
@@ -43,9 +44,10 @@ jobs:
     uses: ./.github/workflows/.deploy.yml
     with:
       environment: prod
+      postgres-host: nr-spar-prod-database
       tag: ${{ needs.init.outputs.pr }}
       target: prod
-      test-mode: false
+      test-mode: true
 
   promote:
     name: Promote Images
