chore(ci): update envar, trigger deploy

--- a/.github/workflows/.deploy.yml
+++ b/.github/workflows/.deploy.yml
@@ -44,7 +44,7 @@ on:
       test-mode:
         description: Test only?
         default: true
-        type: string
+        type: boolean
 
     outputs:
       triggered:
