--- a/sync/openshift.deploy.yml
+++ b/sync/openshift.deploy.yml
@@ -105,12 +105,9 @@ objects:
                           name: ${REPO}-${ZONE}-${APP}
                           key: oracle-sync-user
                     - name: POSTGRES_DB
-                      valueFrom:
-                        secretKeyRef:
-                          name: ${REPO}-${ZONE}-database
-                          key: database-name
+                      value: ${POSTGRES_DB}
                     - name: POSTGRES_HOST
-                      value: ${POSTGRES_HOST}
+                      value: ${REPO}
                     - name: POSTGRES_PASSWORD
                       valueFrom:
                         secretKeyRef:
@@ -122,10 +119,7 @@ objects:
                           name: ${REPO}-${ZONE}-database
                           key: database-port
                     - name: POSTGRES_USER
-                      valueFrom:
-                        secretKeyRef:
-                          name: ${REPO}-${ZONE}-database
-                          key: database-user
+                      value: ${REPO}
                   resources:
                     requests:
                       cpu: 50m
