--- a/.github/workflows/.deploy.yml
+++ b/.github/workflows/.deploy.yml
@@ -37,10 +37,6 @@ on:
         description: Database PVC size; e.g. 1Gi
         default: "128Mi"
         type: string
-      test:
-        description: Run in test mode?
-        default: true
-        type: boolean
       test-mode:
         description: Test only?
         default: true
@@ -107,6 +103,8 @@ jobs:
               -p TAG=${{ inputs.tag }}
               -p TEST_MODE=${{ inputs.test-mode }}
               -p POSTGRES_HOST=${{ inputs.postgres-host }}
+              -p POSTGRES_DB=${{ github.event.name == 'pull_request' && 'nr-fds-pyetl' || 'nr-spar' }}
+              -p POSTGRES_USER=${{ github.event.name == 'pull_request' && 'nr-fds-pyetl' || 'nr-spar' }}
             repository: ${{ github.repository }}
     steps:
       - uses: bcgov/action-deployer-openshift@v3.2.0
@@ -125,8 +123,7 @@ jobs:
 
   run-etl:
     name: Run ETL
-    environment: ${{ inputs.environment }}
-    if: inputs.test == true
+    if: github.event.name == 'pull_request'
     needs: deploy
     runs-on: ubuntu-24.04
     timeout-minutes: 5
