--- a/sync/openshift.deploy.yml
+++ b/sync/openshift.deploy.yml
@@ -8,6 +8,12 @@ parameters:
   - name: ZONE
     description: Deployment zone, e.g. pr-###, test or prod
     required: true
+  - name: ORACLE_SYNC_USER
+    description: Oracle database user
+    required: true
+  - name: ORACLE_SYNC_PASSWORD
+    description: Oracle database password
+    required: true
   - name: POSTGRES_HOST
     description: PostgreSQL database host
     required: true
@@ -91,25 +97,19 @@ objects:
                     - name: ORACLE_HOST
                       valueFrom:
                         secretKeyRef:
-                          name: ${REPO}-${ZONE}-${APP}
+                          name: ${REPO}-${ZONE}-oracle-api
                           key: oracle-host
                     - name: ORACLE_PORT
                       value: ${ORACLE_PORT}
                     - name: ORACLE_SERVICE
                       valueFrom:
                         secretKeyRef:
-                          name: ${REPO}-${ZONE}-${APP}
+                          name: ${REPO}-${ZONE}-oracle-api
                           key: oracle-service
                     - name: ORACLE_SYNC_PASSWORD
-                      valueFrom:
-                        secretKeyRef:
-                          name: ${REPO}-${ZONE}-${APP}
-                          key: oracle-sync-password
+                      value: ${ORACLE_SYNC_PASSWORD}
                     - name: ORACLE_SYNC_USER
-                      valueFrom:
-                        secretKeyRef:
-                          name: ${REPO}-${ZONE}-${APP}
-                          key: oracle-sync-user
+                      value: ${ORACLE_SYNC_USER}
                     - name: POSTGRES_DB
                       value: ${POSTGRES_DB}
                     - name: POSTGRES_HOST
