--- a/.github/workflows/.deploy.yml
+++ b/.github/workflows/.deploy.yml
@@ -55,7 +55,7 @@ jobs:
   # Deployments only run on Pull Requests if the sync/ directory is modified
   init:
     name: Init
-    environment: ${{ inputs.environment }}
+    if: github.event.name == 'pull_request'
     runs-on: ubuntu-24.04
     steps:
       - name: Init
@@ -75,8 +75,8 @@ jobs:
             -p ORACLE_HOST='${{ vars.ORACLE_HOST }}'
             -p ORACLE_PASSWORD='${{ secrets.ORACLE_PASSWORD }}'
             -p ORACLE_SERVICE='${{ vars.ORACLE_SERVICE }}'
-            -p ORACLE_SYNC_USER='${{ vars.ORACLE_SYNC_USER }}'
-            -p ORACLE_SYNC_PASSWORD='${{ secrets.ORACLE_SYNC_PASSWORD }}'
+            -p ORACLE_SYNC_USER=unused
+            -p ORACLE_SYNC_PASSWORD=unused
             -p ORACLE_USER='${{ vars.ORACLE_USER }}'
             -p VITE_USER_POOLS_WEB_CLIENT_ID=unused
           repository: bcgov/nr-spar
@@ -102,6 +102,8 @@ jobs:
             -p ZONE=${{ inputs.target }}
             -p TAG=${{ inputs.tag }}
             -p TEST_MODE=${{ inputs.test-mode }}
+            -p ORACLE_SYNC_USER='${{ vars.ORACLE_SYNC_USER }}'
+            -p ORACLE_SYNC_PASSWORD='${{ secrets.ORACLE_SYNC_PASSWORD }}'
             -p POSTGRES_HOST=${{ inputs.postgres-host }}
             -p POSTGRES_DB=${{ github.event.name == 'pull_request' && 'nr-fds-pyetl' || 'nr-spar' }}
             -p POSTGRES_USER=${{ github.event.name == 'pull_request' && 'nr-fds-pyetl' || 'nr-spar' }}
