Try sync script

--- a/.github/workflows/.deploy.yml
+++ b/.github/workflows/.deploy.yml
@@ -21,6 +21,10 @@ on:
         description: Run ETL after deploy?
         default: false
         type: boolean
+      secrets-from:
+        description: Secrets objects to reference
+        default: ${{ github.event.repository.name }}-${{ github.event.number }}
+        type: string
       tag:
         description: Container tag; usually PR number
         default: ${{ github.event.number }}
@@ -86,7 +90,6 @@ jobs:
   deploy-sync:
     name: Deploy Sync
     environment: ${{ inputs.environment }}
-    needs: init
     runs-on: ubuntu-24.04
     timeout-minutes: 5
     steps:
@@ -105,8 +108,9 @@ jobs:
             -p ORACLE_SYNC_USER='${{ vars.ORACLE_SYNC_USER }}'
             -p ORACLE_SYNC_PASSWORD='${{ secrets.ORACLE_SYNC_PASSWORD }}'
             -p POSTGRES_HOST=${{ inputs.postgres-host }}
-            -p POSTGRES_DB=${{ github.event.name == 'pull_request' && 'nr-fds-pyetl' || 'nr-spar' }}
-            -p POSTGRES_USER=${{ github.event.name == 'pull_request' && 'nr-fds-pyetl' || 'nr-spar' }}
+            -p POSTGRES_DB='nr-spar'
+            -p POSTGRES_USER='nr-spar'
+            -p SECRETS_FROM=${{ inputs.secrets-from }}
           triggers: ${{ inputs.triggers }}
 
   etl-run:
@@ -119,8 +123,7 @@ jobs:
       - timeout-minutes: 10
         uses: bcgov/action-oc-runner@v1.0.0
         with:
-          cronjob: ${{ github.event.repository.name }}-${{ inputs.target }}-sync
-          cronjob_tail: -1
+          commands: ./sync/oc_runner.sh ${{ inputs.target }}
           oc_namespace: ${{ vars.OC_NAMESPACE }}
           oc_server: ${{ vars.OC_SERVER }}
           oc_token: ${{ secrets.OC_TOKEN }}
