--- a/.github/workflows/.deploy.yml
+++ b/.github/workflows/.deploy.yml
@@ -123,7 +123,7 @@ jobs:
       - timeout-minutes: 10
         uses: bcgov/action-oc-runner@v1.0.0
         with:
-          commands: ./sync/oc_runner.sh ${{ inputs.target }}
+          commands: ./sync/oc_run.sh ${{ inputs.target }}
           oc_namespace: ${{ vars.OC_NAMESPACE }}
           oc_server: ${{ vars.OC_SERVER }}
           oc_token: ${{ secrets.OC_TOKEN }}
