--- a/.github/workflows/pr-open.yml
+++ b/.github/workflows/pr-open.yml
@@ -28,8 +28,10 @@ jobs:
     secrets: inherit
     uses: ./.github/workflows/.deploy.yml
     with:
+      postgres-host: nr-spar-test-database
       run-etl: true
-      secrets-from: ${{ github.event.repository.name }}-${{ github.event.number }}
+      secrets-from: nr-spar-test
+      test-mode: true
       triggers: ('sync/')
 
   # results:
