--- a/common/openshift.init.yml
+++ b/common/openshift.init.yml
@@ -3,7 +3,7 @@ kind: Template
 parameters:
   - name: NAME
     description: Product name
-    value: nr-spar
+    value: nr-fds-pyetl
   - name: ZONE
     description: Deployment zone, e.g. pr-### or prod
     required: true
@@ -51,7 +51,7 @@ objects:
     metadata:
       name: allow-same-namespace
       labels:
-        template: nr-spar-backend-network-security-policy
+        template: nr-fds-pyetl-network-security-policy
     spec:
       policyTypes:
         - Ingress
