chore(ci): cut down on objects and resources (#90)
Co-authored-by: Kevin Netherton <kevin.netherton@gov.bc.ca>

--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -31,8 +31,6 @@ jobs:
     secrets: inherit
     uses: ./.github/workflows/.deploy.yml
     with:
-      environment: test
-      postgres-host: nr-spar-test-database
       tag: ${{ needs.init.outputs.pr }}
       target: test
       test-mode: false
@@ -45,6 +43,7 @@ jobs:
     with:
       environment: prod
       postgres-host: nr-spar-prod-database
+      secrets-from: nr-spar-prod
       tag: ${{ needs.init.outputs.pr }}
       target: prod
       test-mode: true
