--- a/.github/workflows/.deploy.yml
+++ b/.github/workflows/.deploy.yml
@@ -10,12 +10,18 @@ on:
       environment:
         description: GitHub/OpenShift environment; usually PR number, test or prod
         default: ''
-        required: false
         type: string
       postgres-host:
         description: PostgreSQL host
-        default: ${{ github.event.repository.name }}-${{ github.event.number }}-database
-        required: false
+        default: nr-spar-test-database
+        type: string
+      run-etl:
+        description: Run ETL after deploy?
+        default: false
+        type: boolean
+      secrets-from:
+        description: Secrets objects to reference
+        default: nr-spar-test
         type: string
       tag:
         description: Container tag; usually PR number
@@ -48,64 +54,11 @@ on:
         value: ${{ jobs.sync.outputs.deploy }}
 
 jobs:
-  # Deployments only run on Pull Requests if the sync/ directory is modified
-  init:
-    name: Init
-    environment: ${{ inputs.environment }}
-    runs-on: ubuntu-24.04
-    steps:
-      - name: Init
-        uses: bcgov/action-deployer-openshift@v4.0.0
-        timeout-minutes: 1
-        with:
-          oc_namespace: ${{ vars.OC_NAMESPACE }}
-          oc_server: ${{ vars.OC_SERVER }}
-          oc_token: ${{ secrets.OC_TOKEN }}
-          file: common/openshift.init.yml
-          parameters:
-            -p NAME=${{ github.event.repository.name }}
-            -p ZONE=${{ inputs.target }}
-            -p DB_PASSWORD='${{ secrets.DB_PASSWORD }}'
-            -p FORESTCLIENTAPI_KEY=unused
-            -p ORACLE_CERT_SECRET='${{ secrets.ORACLE_CERT_SECRET }}'
-            -p ORACLE_HOST='${{ vars.ORACLE_HOST }}'
-            -p ORACLE_PASSWORD='${{ secrets.ORACLE_PASSWORD }}'
-            -p ORACLE_SERVICE='${{ vars.ORACLE_SERVICE }}'
-            -p ORACLE_SYNC_USER='${{ vars.ORACLE_SYNC_USER }}'
-            -p ORACLE_SYNC_PASSWORD='${{ secrets.ORACLE_SYNC_PASSWORD }}'
-            -p ORACLE_USER='${{ vars.ORACLE_USER }}'
-            -p VITE_USER_POOLS_WEB_CLIENT_ID=unused
-          repository: bcgov/nr-spar
-          overwrite: true
-          triggers: ${{ inputs.triggers }}
-
   deploy:
     name: Deploy
     environment: ${{ inputs.environment }}
-    needs: init
     runs-on: ubuntu-24.04
     timeout-minutes: 5
-    strategy:
-      matrix:
-        name: [database, sync]
-        include:
-          - name: database
-            file: common/openshift.database.yml
-            overwrite: false
-            parameters:
-              -p DB_PVC_SIZE=${{ inputs.db-pvc-size }}
-              -p NAME=${{ github.event.repository.name }}
-            repository: bcgov/nr-spar
-          - name: sync
-            file: sync/openshift.deploy.yml
-            overwrite: true
-            parameters:
-              -p TAG=${{ inputs.tag }}
-              -p TEST_MODE=${{ inputs.test-mode }}
-              -p POSTGRES_HOST=${{ inputs.postgres-host }}
-              -p POSTGRES_DB=${{ github.event.name == 'pull_request' && 'nr-fds-pyetl' || 'nr-spar' }}
-              -p POSTGRES_USER=${{ github.event.name == 'pull_request' && 'nr-fds-pyetl' || 'nr-spar' }}
-            repository: ${{ github.repository }}
     steps:
       - uses: bcgov/action-deployer-openshift@v4.0.0
         timeout-minutes: 5
@@ -113,26 +66,31 @@ jobs:
           oc_namespace: ${{ vars.OC_NAMESPACE }}
           oc_server: ${{ vars.OC_SERVER }}
           oc_token: ${{ secrets.OC_TOKEN }}
-          file: ${{ matrix.file }}
-          overwrite: ${{ matrix.overwrite }}
+          file: sync/openshift.deploy.yml
+          overwrite: sync/openshift.deploy.yml
           parameters:
             -p ZONE=${{ inputs.target }}
-            ${{ matrix.parameters }}
-          repository: ${{ matrix.repository }}
+            -p TAG=${{ inputs.tag }}
+            -p TEST_MODE=${{ inputs.test-mode }}
+            -p ORACLE_SYNC_USER='${{ vars.ORACLE_SYNC_USER }}'
+            -p ORACLE_SYNC_PASSWORD='${{ secrets.ORACLE_SYNC_PASSWORD }}'
+            -p POSTGRES_HOST=${{ inputs.postgres-host }}
+            -p POSTGRES_DB='nr-spar'
+            -p POSTGRES_USER='nr-spar'
+            -p SECRETS_FROM=${{ inputs.secrets-from }}
           triggers: ${{ inputs.triggers }}
 
-  run-etl:
+  etl-run:
     name: Run ETL
-    if: github.event.name == 'pull_request'
-    needs: deploy
+    if: inputs.run-etl == true
+    needs: [deploy]
     runs-on: ubuntu-24.04
-    timeout-minutes: 5
+    timeout-minutes: 10
     steps:
       - timeout-minutes: 10
         uses: bcgov/action-oc-runner@v1.0.0
         with:
-          cronjob: ${{ github.event.repository.name }}-${{ inputs.target }}-sync
-          cronjob_tail: -1
+          commands: ./sync/oc_run.sh ${{ inputs.target }}
           oc_namespace: ${{ vars.OC_NAMESPACE }}
           oc_server: ${{ vars.OC_SERVER }}
           oc_token: ${{ secrets.OC_TOKEN }}
