--- a/.github/workflows/etl-test.yml
+++ b/.github/workflows/etl-test.yml
@@ -21,3 +21,16 @@ jobs:
           oc_server: ${{ vars.OC_SERVER }}
           oc_token: ${{ secrets.OC_TOKEN }}
           commands: ./sync/oc_run.sh test ${{ secrets.oc_token }}
+      - uses: simbo/msteams-message-card-action@latest
+        name: Notify Microsoft Teams
+        if: always()  # this ensures it runs even if earlier steps fail
+        with:
+          webhook: ${{ vars.MS_TEAMS_WEBHOOK_URI }}
+          title: "Spar ETL Sync Job status - TEST"
+          message: "${{github.event.workflow_run.head_commit.message}}"
+          color: '#03fc17'
+          text: |
+            Workflow `${{ github.workflow }}` on `${{ github.repository }}` \
+            completed with status: **${{ job.status }}**
+          theme-color: ${{ job.status == 'success' && '00FF00' || 'FF0000' }}
+
