chore(ci): disable test-mode for PROD

--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -46,7 +46,7 @@ jobs:
       secrets-from: nr-spar-prod
       tag: ${{ needs.init.outputs.pr }}
       target: prod
-      test-mode: true
+      test-mode: false
 
   promote:
     name: Promote Images
